<resources>
    <string name="app_name">Inventory</string>
    <string name="empty_view_title_text">Sorry, but we seem to be out of stock!</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="title_new_product">Add a Product</string>
    <string name="title_edit_product">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="insert_product_successful">Product saved</string>
    <string name="insert_product_failed">Error saving product</string>
    <string name="update_product_successful">Product updated</string>
    <string name="update_product_failed">Error updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_product_failed">Error deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete_all_dialog_msg">Delete all products?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="hint_name">Product Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_email">Supplier\'s Email Address</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="dollar_sign">$</string>
    <string name="button_order">Place Order from Supplier</string>
    <string name="button_delete">Delete Product</string>
    <string name="tv_product_name">Product Name:</string>
    <string name="tv_quantity">In Stock Quantity:</string>
    <string name="tv_price">Unit Price:</string>
    <string name="button_sell">Sell</string>
    <string name="toast_out_of_stock">Current product is out of stock!</string>
    <string name="toast_negative_quantity">Product quantity cannot be less than zero!</string>
    <string name="email_extra_subject">Restock Order</string>
    <string name="email_extra_text">Please send us an additional 25 units of </string>
    <string name="email_thanks">\n\nThank you, \nYour Favorite Client</string>
    <string name="button_restock">Restock Product</string>
    <string name="intent_chooser_text">Select a photo</string>
    <string name="photo_load_error">Failed to load image</string>
    <string name="photo_parcel_error">Error closing ParcelFile Descriptor</string>
    <string name="error_no_product_name">A product name is required</string>
    <string name="error_no_product_price">A product price is required</string>
    <string name="error_no_supplier_email">A supplier email address is required</string>
    <string name="error_invalid_email">A valid supplier email address is required</string>
    <string name="error_nothing_to_save">Add product details before saving!</string>
</resources>
