<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for a single list item in the list of products -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/product_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:padding="@dimen/activity_margin">

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingBottom="@dimen/lv_bottom_padding"
            android:text="@string/tv_product_name"/>

        <TextView
            android:id="@+id/tv_name_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/tv_product_name"
            android:layout_toRightOf="@id/tv_product_name"
            android:gravity="end"
            android:paddingBottom="@dimen/lv_bottom_padding"
            android:textStyle="bold"
            tools:text="Xbox One"/>

        <TextView
            android:id="@+id/tv_in_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_product_name"
            android:paddingBottom="@dimen/lv_bottom_padding"
            android:text="@string/tv_quantity"/>

        <TextView
            android:id="@+id/tv_in_stock_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_product_name"
            android:layout_toEndOf="@id/tv_in_stock"
            android:layout_toRightOf="@id/tv_in_stock"
            android:gravity="end"
            android:paddingBottom="@dimen/lv_bottom_padding"
            android:textStyle="bold"
            tools:text="300"/>

        <TextView
            android:id="@+id/tv_unit_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_in_stock"
            android:text="@string/tv_price"/>

        <TextView
            android:id="@+id/tv_unit_price_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_in_stock"
            android:layout_toEndOf="@id/tv_unit_price"
            android:layout_toRightOf="@id/tv_unit_price"
            android:gravity="end"
            android:textStyle="bold"
            tools:text="$250"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/button_sell"/>

</LinearLayout>